force-app/main/default/objects/Dog_Fact__c/Dog_Fact__c.object-meta.xml
<CustomObject>
    <description>Used to train team members on dog facts on different breeds</description>
    <label>Assigned Dog Fact</label>
    <nameField>
        <displayFormat>DogFact-{0000}</displayFormat>
        <label>Assigned Dog Fact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Dog Facts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>