force-app/main/default/objects/Dog_Fact__c/fields/Breed_Id__c.field-meta.xml
<CustomField>
    <fullName>Breed_Id__c</fullName>
    <label>Breed Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>