force-app/main/default/objects/Dog_Fact__c/fields/Breed_Name__c.field-meta.xml
<CustomField>
    <fullName>Breed_Name__c</fullName>
    <label>Breed Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>