force-app/main/default/objects/Dog_Fact__c/fields/Hypoallergenic__c.field-meta.xml
<CustomField>
    <fullName>Hypoallergenic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hypoallergenic</label>
    <type>Checkbox</type>
</CustomField>