force-app/main/default/objects/Dog_Fact__c/fields/Maximum_Life__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Life__c</fullName>
    <label>Maximum Life</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>