force-app/main/default/objects/Dog_Fact__c/fields/Minimum_Life__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Life__c</fullName>
    <label>Minimum Life</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>