force-app/main/default/objects/Dog_Fact__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <inlineHelpText>Assigned once the user submits for a dog fact to learn</inlineHelpText>
    <label>Requested Date</label>
    <type>DateTime</type>
</CustomField>